--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,8 @@ deploy:
   only:
     - master
   script:
+    - echo HTTP_PROXY:$HTTP_PROXY
+    - echo cat /etc/hosts
     - docker login --username $DOCKER_HUB_USER_NAME --password $DOCKER_HUB_USER_PASSWORD
     - docker push qiushaocloud/nginx-server:latest
   tags:
